#9 Updated/ added enums ETableRight, OrefDescValueType, RelationTarget, TicketSecurityLevel, TicketStatusTimeCounter, ValueOverride

--- a/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
@@ -214,14 +214,14 @@ items:
   nameWithType: NSPocketStartupData.GetTableRights()
   fullName: CRMScript.NetServer.NSPocketStartupData.GetTableRights()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Select</li><li>Enum: 2 = Update</li><li>Enum: 4 = Insert</li><li>Enum: 8 = Delete</li><li>Enum: 16 = Filtering</li><li>Enum: 32 = RestrictedUpdate</li><li>Enum: 64 = Unused1</li><li>Enum: 128 = Uninitialized</li><li>Enum: 15 = FULL</li><li>Enum: 38 = WRITE</li><li>Enum: 34 = URU</li><li>Enum: 11 = UDR</li><li>Enum: 3 = UR</li><li>Enum: 7 = URI</li><li>Enum: 1 = R</li><li>Enum: 5 = RI</li><li>Enum: 17 = RF</li><li>Enum: 16 = F</li><li>Enum: 20 = FI</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer[] GetTableRights()
     parameters: []
     return:
       type: CRMScript.Global.Integer[]
-      description: List of table rights for logged in user, in the same order as the Tables array parameter
+      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketStartupData thing;\nInteger[] tableRights = thing.GetTableRights();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketStartupData.SetBaseLocaleTimeZoneData(NSTimeZoneData)
@@ -417,7 +417,7 @@ items:
     parameters:
     - id: tableRights
       type: CRMScript.Global.Integer[]
-      description: List of tablerights for logged in user, in the same order as the Tables array parameter. See enum tableRights.
+      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -507,15 +507,15 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ETableRight
+  commentId: T:CRMScript.NetServer.ETableRight
+  isExternal: true
+  name: ETableRight
+  nameWithType: ETableRight
+  fullName: CRMScript.NetServer.ETableRight
