--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -80,14 +80,14 @@ items:
   nameWithType: NSPreference.GetDisplayType()
   fullName: CRMScript.NetServer.NSPreference.GetDisplayType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Number</li><li>Enum: 2 = Text</li><li>Enum: 3 = Bool</li><li>Enum: 4 = ListOfValues</li><li>Enum: 5 = ListTableRef</li><li>Enum: 6 = TimeList</li><li>Enum: 7 = ContactID</li><li>Enum: 8 = PersonID</li><li>Enum: 9 = ProjectID</li><li>Enum: 10 = SelectionID</li><li>Enum: 11 = PosSize</li><li>Enum: 12 = TimeZone</li><li>Enum: 13 = Time</li><li>Enum: 14 = Password</li><li>Enum: 15 = MultiLineText</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDisplayType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Display type, populated when asked for.
+      description: Display type, populated when asked for. See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreference thing;\nInteger displayType = thing.GetDisplayType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreference.GetDisplayValue()
@@ -308,7 +308,7 @@ items:
     parameters:
     - id: displayType
       type: CRMScript.Global.Integer
-      description: Display type, populated when asked for. See enum displayType.
+      description: Display type, populated when asked for. See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -548,3 +548,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.PrefDescValueType
+  commentId: T:CRMScript.NetServer.PrefDescValueType
+  isExternal: true
+  name: PrefDescValueType
+  nameWithType: PrefDescValueType
+  fullName: CRMScript.NetServer.PrefDescValueType
