--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
@@ -414,14 +414,14 @@ items:
   nameWithType: NSPreferenceDescription.GetValueType()
   fullName: CRMScript.NetServer.NSPreferenceDescription.GetValueType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Number</li><li>Enum: 2 = Text</li><li>Enum: 3 = Bool</li><li>Enum: 4 = ListOfValues</li><li>Enum: 5 = ListTableRef</li><li>Enum: 6 = TimeList</li><li>Enum: 7 = ContactID</li><li>Enum: 8 = PersonID</li><li>Enum: 9 = ProjectID</li><li>Enum: 10 = SelectionID</li><li>Enum: 11 = PosSize</li><li>Enum: 12 = TimeZone</li><li>Enum: 13 = Time</li><li>Enum: 14 = Password</li><li>Enum: 15 = MultiLineText</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetValueType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1=number, 2=text, 3=bool, 4=list of values; 5=list table ref; 6=contact ID, 7=Person ID, 8=Project ID, 9=Selection ID
+      description: See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger valueType = thing.GetValueType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.SetAccessFlags(Integer)
@@ -815,7 +815,7 @@ items:
     parameters:
     - id: valueType
       type: CRMScript.Global.Integer
-      description: 1=number, 2=text, 3=bool, 4=list of values; 5=list table ref; 6=contact ID, 7=Person ID, 8=Project ID, 9=Selection ID. See enum valueType.
+      description: See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -857,3 +857,9 @@ references:
   name: PreferenceLevel
   nameWithType: PreferenceLevel
   fullName: CRMScript.NetServer.PreferenceLevel
+- uid: CRMScript.NetServer.PrefDescValueType
+  commentId: T:CRMScript.NetServer.PrefDescValueType
+  isExternal: true
+  name: PrefDescValueType
+  nameWithType: PrefDescValueType
+  fullName: CRMScript.NetServer.PrefDescValueType
