--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
@@ -484,14 +484,14 @@ items:
   nameWithType: NSQuoteAlternative.GetUserValueOverride()
   fullName: CRMScript.NetServer.NSQuoteAlternative.GetUserValueOverride()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Total</li><li>Enum: 2 = DiscountPercent</li><li>Enum: 3 = DiscountAmount</li><li>Enum: 4 = EarningPercent</li><li>Enum: 5 = EarningAmount</li></ul>\n"
-  remarks: 
+  summary: ""
+  remarks: "\nIf the user has filled out the discountpercentage field, then the UserValueOverride field is set to OverridePercent. (The DiscountAmount, EarningPercent, EarningAmount and TotalPrice fields are calculated based on the discountPercent.)\n"
   syntax: 
     content: Integer GetUserValueOverride()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. If the user has filled out the discountpercentage field, then the UserValueOverride field is set to OverridePercent. (The DiscountAmount, EarningPercent, EarningAmount and TotalPrice fields are calculated based on the discountPercent.)
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteAlternative thing;\nInteger userValueOverride = thing.GetUserValueOverride();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAlternative.GetVAT()
@@ -991,7 +991,7 @@ items:
     parameters:
     - id: userValueOverride
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. See enum userValueOverride.
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1071,3 +1071,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ValueOverride
+  commentId: T:CRMScript.NetServer.ValueOverride
+  isExternal: true
+  name: ValueOverride
+  nameWithType: ValueOverride
+  fullName: CRMScript.NetServer.ValueOverride
