--- a/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
@@ -174,14 +174,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.GetSource()
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSource()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The source of the relation
+      description: The source of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger source = thing.GetSource();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: source
       type: CRMScript.Global.Integer
-      description: The source of the relation. See enum source.
+      description: The source of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -411,3 +411,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.RelationTarget
+  commentId: T:CRMScript.NetServer.RelationTarget
+  isExternal: true
+  name: RelationTarget
+  nameWithType: RelationTarget
+  fullName: CRMScript.NetServer.RelationTarget
