--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -916,14 +916,14 @@ items:
   nameWithType: NSTicket.GetSlevel()
   fullName: CRMScript.NetServer.NSTicket.GetSlevel()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Internal</li><li>Enum: 2 = External</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSlevel()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security-level of the ticket.
+      description: The security-level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetTicketId()
@@ -1981,7 +1981,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security-level of the ticket. See enum slevel.
+      description: The security-level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2227,3 +2227,9 @@ references:
   name: TicketBaseStatus
   nameWithType: TicketBaseStatus
   fullName: CRMScript.NetServer.TicketBaseStatus
+- uid: CRMScript.NetServer.TicketSecurityLevel
+  commentId: T:CRMScript.NetServer.TicketSecurityLevel
+  isExternal: true
+  name: TicketSecurityLevel
+  nameWithType: TicketSecurityLevel
+  fullName: CRMScript.NetServer.TicketSecurityLevel
