--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -783,13 +783,14 @@ items:
   nameWithType: NSTicketEntity.GetSlevel()
   fullName: CRMScript.NetServer.NSTicketEntity.GetSlevel()
   type: Method
-  summary: "\nThe security level of the ticket.\n"
-  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Internal</li><li>Enum: 2 = External</li></ul>"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Integer GetSlevel()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The security level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetStatus()
@@ -1663,14 +1664,14 @@ items:
   nameWithType: NSTicketEntity.SetSlevel(Integer)
   fullName: CRMScript.NetServer.NSTicketEntity.SetSlevel(Integer)
   type: Method
-  summary: "\nThe securitylevel of the ticket.\n"
-  remarks: "\nSee enum slevel.\n" 
+  summary: ""
+  remarks: "" 
   syntax: 
     content: Void SetSlevel(Integer slevel)
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: 
+      description: The security level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2014,3 +2015,9 @@ references:
   name: TicketBaseStatus
   nameWithType: TicketBaseStatus
   fullName: CRMScript.NetServer.TicketBaseStatus
+- uid: CRMScript.NetServer.TicketSecurityLevel
+  commentId: T:CRMScript.NetServer.TicketSecurityLevel
+  isExternal: true
+  name: TicketSecurityLevel
+  nameWithType: TicketSecurityLevel
+  fullName: CRMScript.NetServer.TicketSecurityLevel
