--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
@@ -262,14 +262,14 @@ items:
   nameWithType: NSTicketMessage.GetSlevel()
   fullName: CRMScript.NetServer.NSTicketMessage.GetSlevel()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Internal</li><li>Enum: 2 = External</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSlevel()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security-level of the message.
+      description: The security-level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessage thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessage.GetTicketMessageId()
@@ -529,7 +529,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security-level of the message. See enum slevel.
+      description: The security-level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -599,3 +599,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TicketSecurityLevel
+  commentId: T:CRMScript.NetServer.TicketSecurityLevel
+  isExternal: true
+  name: TicketSecurityLevel
+  nameWithType: TicketSecurityLevel
+  fullName: CRMScript.NetServer.TicketSecurityLevel
