--- a/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
@@ -128,14 +128,14 @@ items:
   nameWithType: NSTicketStatusEntity.GetTimeCounter()
   fullName: CRMScript.NetServer.NSTicketStatusEntity.GetTimeCounter()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Internally</li><li>Enum: 2 = Externally</li><li>Enum: 3 = Queue</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTimeCounter()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which field in ticket we count time spent on (queue, internal, external)
+      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketStatusEntity thing;\nInteger timeCounter = thing.GetTimeCounter();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketStatusEntity.SetName(String)
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: timeCounter
       type: CRMScript.Global.Integer
-      description: Which field in ticket we count time spent on (queue, internal, external). See enum timeCounter.
+      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -285,3 +285,9 @@ references:
   name: TicketBaseStatus
   nameWithType: TicketBaseStatus
   fullName: CRMScript.NetServer.TicketBaseStatus
+- uid: CRMScript.NetServer.TicketStatusTimeCounter
+  commentId: T:CRMScript.NetServer.TicketStatusTimeCounter
+  isExternal: true
+  name: TicketStatusTimeCounter
+  nameWithType: TicketStatusTimeCounter
+  fullName: CRMScript.NetServer.TicketStatusTimeCounter
