--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -64,14 +64,14 @@ items:
   nameWithType: NSVisibleFor.GetVisibility()
   fullName: CRMScript.NetServer.NSVisibleFor.GetVisibility()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = All</li><li>Enum: 1 = Associate</li><li>Enum: 2 = Group</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetVisibility()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: See <xref href=\"Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSVisibleFor thing;\nInteger visibility = thing.GetVisibility();</code></pre>\n"
 - uid: CRMScript.NetServer.NSVisibleFor.GetVisibleId()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: visibility
       type: CRMScript.Global.Integer
-      description: See enum visibility.
+      description: See <xref href=\"Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -185,3 +185,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.Visibility
+  commentId: T:CRMScript.NetServer.Visibility
+  isExternal: true
+  name: Visibility
+  nameWithType: Visibility
+  fullName: CRMScript.NetServer.Visibility
