--- a/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
@@ -418,14 +418,14 @@ items:
   nameWithType: NSWebPanelEntity.GetUrlEncoding()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetUrlEncoding()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = None</li><li>Enum: 2 = ANSI</li><li>Enum: 3 = Unicode</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetUrlEncoding()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The encoding of the URL
+      description: The encoding of the URL. See <xref href=\"UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSWebPanelEntity thing;\nInteger urlEncoding = thing.GetUrlEncoding();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebPanelEntity.GetVisibleIn()
@@ -878,7 +878,7 @@ items:
     parameters:
     - id: urlEncoding
       type: CRMScript.Global.Integer
-      description: The encoding of the URL See enum urlEncoding.
+      description: The encoding of the URL. See <xref href=\"UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -986,3 +986,9 @@ references:
   name: Navigation
   nameWithType: Navigation
   fullName: CRMScript.NetServer.Navigation
+- uid: CRMScript.NetServer.urlEncoding
+  commentId: T:CRMScript.NetServer.urlEncoding
+  isExternal: true
+  name: urlEncoding
+  nameWithType: urlEncoding
+  fullName: CRMScript.NetServer.urlEncoding
