--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -936,8 +936,6 @@ items:
       href: CRMScript.NetServer.designtype.yml
     - name: Enum destination
       href: CRMScript.NetServer.destination.yml
-    - name: Enum displayType
-      href: CRMScript.NetServer.displayType.yml
     - name: DocTmplInvitationType
       href: CRMScript.NetServer.DocTmplInvitationType.yml
     - name: DocTmplPrivacyType
@@ -958,6 +956,8 @@ items:
       href: CRMScript.NetServer.entityId.yml
     - name: Enum erpActorType
       href: CRMScript.NetServer.erpActorType.yml
+    - name: ETableRight
+      href: CRMScript.NetServer.ETableRight.yml
     - name: EventHandlerType
       href: CRMScript.NetServer.EventHandlerType.yml
     - name: ExecuteOnEvent
@@ -1006,6 +1006,8 @@ items:
       href: CRMScript.NetServer.personId.yml
     - name: Enum platform
       href: CRMScript.NetServer.platform.yml
+    - name: PrefDescValueType
+      href: CRMScript.NetServer.PrefDescValueType.yml
     - name: PreferenceLevel
       href: CRMScript.NetServer.PreferenceLevel.yml
     - name: Enum priority
@@ -1018,6 +1020,8 @@ items:
       href: CRMScript.NetServer.RecurrencePattern.yml
     - name: RecurrenceUpdateMode
       href: CRMScript.NetServer.RecurrenceUpdateMode.yml
+    - name: RelationTarget
+      href: CRMScript.NetServer.RelationTarget.yml
     - name: Enum relationToOwner
       href: CRMScript.NetServer.relationToOwner.yml
     - name: Enum reportCategory
@@ -1047,14 +1051,8 @@ items:
       href: CRMScript.NetServer.ShipmentStatus.yml
     - name: ShowState
       href: CRMScript.NetServer.ShowState.yml
-    - name: Enum slevel
-      href: CRMScript.NetServer.slevel.yml
-    - name: Enum source
-      href: CRMScript.NetServer.source.yml
     - name: StringSearchType
       href: CRMScript.NetServer.StringSearchType.yml
-    - name: Enum tableRights
-      href: CRMScript.NetServer.tableRights.yml
     - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
     - name: TicketBaseStatus
@@ -1063,20 +1061,20 @@ items:
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
     - name: TicketPriorityEscalateEvent
       href: CRMScript.NetServer.TicketPriorityEscalateEvent.yml
-    - name: Enum timeCounter
-      href: CRMScript.NetServer.timeCounter.yml
+    - name: TicketSecurityLevel
+      href: CRMScript.NetServer.TicketSecurityLevel.yml
+    - name: TicketStatusTimeCounter
+      href: CRMScript.NetServer.TicketStatusTimeCounter.yml
     - name: UDefFieldType
       href: CRMScript.NetServer.UDefFieldType.yml
     - name: UDefType
       href: CRMScript.NetServer.UDefType.yml
-    - name: Enum urlEncoding
-      href: CRMScript.NetServer.urlEncoding.yml
-    - name: Enum userValueOverride
-      href: CRMScript.NetServer.userValueOverride.yml
-    - name: Enum valueType
-      href: CRMScript.NetServer.valueType.yml
-    - name: Enum visibility
-      href: CRMScript.NetServer.visibility.yml
+    - name: UrlEncoding
+      href: CRMScript.NetServer.UrlEncoding.yml
+    - name: ValueOverride
+      href: CRMScript.NetServer.ValueOverride.yml
+    - name: Visibility
+      href: CRMScript.NetServer.Visibility.yml
     - name: WebhookState
       href: CRMScript.NetServer.WebhookState.yml
     - name: WidgetRequiredFields
