--- a/docs/api-reference/CRMScript.Native.Message.yml
+++ b/docs/api-reference/CRMScript.Native.Message.yml
@@ -482,7 +482,7 @@ items:
   fullName: CRMScript.Native.Message.toParser(Parser)
   type: Method
   summary: "\nThis function loads many fields of the message to the input parser.\n"
-  remarks: "\nThe fields will be loaded as message.value<ul><li>message.id, The ID of the message</li><li>message.slevelInteger, The security level of the message Internal = 1, External = 2</li><li>message.slevel, The security level of the message as a String, according to the active user's language.</li><li>message.createdAt, The datetime when the message is created in format 12. jan 1998, kl. 11:23.</li><li>message.createdAtRaw, The datetime when the message is created in format 1998-01-12 11:23:15</li><li>message.author,  The author of the message</li><li>message.bodyHtml, The HTML body of the message</li><li>message.messageCategory, The messageCategory, can be:  Message = 0, Bounce = 1, OutboxFailed = 2</li><li>message.body, The body of the message, if this is a plaintext message, this text will be returned with activated links</li><li>message.bodyPlain, The body of the message exactly as saved in database.</li><li>message.header, The message header</li><li>message.mailSorter, If this message is a recieved mail, the this is the name of the mail filter that took it.</li><li>message.x_myextrafield, The value of the extrafield</li></ul>\n"
+  remarks: "\nThe fields will be loaded as message.value<ul><li>message.id, The ID of the message</li><li>message.slevelInteger, The security level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.</li><li>message.slevel, The security level of the message as a String, according to the active user's language.</li><li>message.createdAt, The datetime when the message is created in format 12. jan 1998, kl. 11:23.</li><li>message.createdAtRaw, The datetime when the message is created in format 1998-01-12 11:23:15</li><li>message.author,  The author of the message</li><li>message.bodyHtml, The HTML body of the message</li><li>message.messageCategory, The messageCategory, can be:  Message = 0, Bounce = 1, OutboxFailed = 2</li><li>message.body, The body of the message, if this is a plaintext message, this text will be returned with activated links</li><li>message.bodyPlain, The body of the message exactly as saved in database.</li><li>message.header, The message header</li><li>message.mailSorter, If this message is a recieved mail, the this is the name of the mail filter that took it.</li><li>message.x_myextrafield, The value of the extrafield</li></ul>\n"
   syntax: 
     content: Void toParser(Parser parser)
     parameters:
@@ -547,3 +547,9 @@ references:
   name: Parser
   nameWithType: Parser
   fullName: CRMScript.Native.Parser
+- uid: CRMScript.NetServer.TicketSecurityLevel
+  commentId: T:CRMScript.NetServer.TicketSecurityLevel
+  isExternal: true
+  name: TicketSecurityLevel
+  nameWithType: TicketSecurityLevel
+  fullName: CRMScript.NetServer.TicketSecurityLevel
