--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -483,7 +483,7 @@ items:
   fullName: CRMScript.Native.Ticket.setValue(String,String)
   type: Method
   summary: "\nSets column colName to the given value.\nObs: For this to actually affect the ticket, you will have to use the function save() after you have set all the values you want.\n"
-  remarks: "\nPossible values are the extrafields on the ticket and the following:</p><ul><li>title</li><li>category: the category id</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, 1 is internal, 2 is external</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus: (ticket_status), the ID of the custom status field</li><li>custId: the ID of the primary customer</li><li>customers: comma-separated list of customer ids</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author: a string containing the name of the ticket author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>stopEscalation</li><li>readStatus (read_status)</li><li>deadline</li><li>filterAddress</li><li>timeToClose</li><li>realTimeToClose</li><li>dbiAgentId</li><li>dbiKey</li><li>dbiLastModified</li></ul>\n"
+  remarks: "\nPossible values are the extrafields on the ticket and the following:</p><ul><li>category: the category ID</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus: (ticket_status), the ID of the custom status field</li><li>custId: the ID of the primary customer</li><li>customers: comma-separated list of customer ids</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author: a string containing the name of the ticket author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>stopEscalation</li><li>readStatus (read_status)</li><li>deadline</li><li>filterAddress</li><li>timeToClose</li><li>realTimeToClose</li><li>dbiAgentId</li><li>dbiKey</li><li>dbiLastModified</li></ul>\n"
   syntax: 
     content: Void setValue(String colName, String value)
     parameters:
@@ -584,3 +584,9 @@ references:
   name: Parser
   nameWithType: Parser
   fullName: CRMScript.Native.Parser
+- uid: CRMScript.NetServer.TicketSecurityLevel
+  commentId: T:CRMScript.NetServer.TicketSecurityLevel
+  isExternal: true
+  name: TicketSecurityLevel
+  nameWithType: TicketSecurityLevel
+  fullName: CRMScript.NetServer.TicketSecurityLevel
